backend/tests/snapshots/golden_tools__entities_search.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "results": [
    {
      "id": "person:<id1>",
      "kind": "person",
      "name": "Alice",
      "aliases": [],
      "summary": ""
    }
  ],
  "total": 1,
  "has_more": false
}
