backend/tests/snapshots/golden_tools__entity_update.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "id": "person:<id1>",
  "kind": "person",
  "name": "Alice",
  "aliases": [
    "Al"
  ],
  "summary": "Tea person"
}
