backend/tests/snapshots/golden_tools__memory_update.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "id": "memory:<id2>",
  "owner": "user:<id3>",
  "vault": "vault:<id4>",
  "subject": "person:<id1>",
  "text": "Alice likes oolong tea",
  "source": null,
  "created_at": "<ts>",
  "type": "world",
  "proof_count": 1,
  "status": null,
  "source_memories": null,
  "updated_at": "<ts>",
  "version": 2,
  "owner_email": null
}
