backend/tests/snapshots/golden_tools__search.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "results": [
    {
      "id": "demo:up.transaction:t1",
      "source": "demo",
      "type": "up.transaction",
      "title": "Woolworths",
      "snippet": "Woolworths at Spending",
      "occurred_at": "<ts>",
      "url": null
    }
  ],
  "has_more": false
}
