backend/tests/snapshots/golden_tools__vault_clone.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "id": "vault:<id15>",
  "name": "Team Copy",
  "kind": "org",
  "created_at": "<ts>",
  "entities_copied": 0
}
