backend/tests/snapshots/golden_tools__vault_create.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "id": "vault:<id14>",
  "name": "Team",
  "kind": "org",
  "created_at": "<ts>"
}
